--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ body {
   position: fixed;
   width: 100%;
   z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
@@ -193,15 +196,23 @@ p ~ ul {
     border-width: 8px 16px 8px 0;
     border-color: transparent var(--main-color) transparent transparent;
   }
-}
 
-@media (max-width: 600px) {
   h1 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 
   h3 .fa-user-tie {
     font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .main-header {
+    height: 15vh;
+  }
+
+  #timeline > ul {
+    padding-top: 150px;
   }
 }
 
